src/style.css
.notifications-container {
  position: fixed;
  top: 1rem;
  right: 1rem;
  z-index: 1;
}

.notifications-container > .toast {
  background-color: white;
}

h1 {
  font-family: 'Barlow';
  font-weight: 900;
  font-size: 2.25rem;
}

.ui.button {
  font-weight: 500;
  text-transform: uppercase;
}

.branded-title {
  font-family: 'Barlow';
  font-size: 1.20rem;
  font-weight: 600;
  background: linear-gradient(
    to right, 
    rgb(255, 255, 255), 
    rgb(188, 188, 188)
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  text-align: right;
}

.ui.secondary.menu {
  /* background: rgb(255, 255, 255); Custom Navbar background*/
}

.ui.secondary.menu .active.item {
  font-weight: 600;
}

